--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,13 @@
-.marcador {
-	background: pink;
-	border: 1px solid #f94646;
+.marcador1 {
+	/*background: #81BEF7;*/
+	border: 4px solid red;
+}
+
+.marcador2 {
+	border: 4px solid green;
+}
+
+.marcador3 {
+	background: #81BEF7;
+	border: 4px solid purple;
 }
