--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,7 @@
-.marcador1 {
-	/*background: #81BEF7;*/
-	border: 4px solid red;
-}
-
-.marcador2 {
-	border: 4px solid green;
-}
-
-.marcador3 {
-	background: #81BEF7;
+.vizualizar {
 	border: 4px solid purple;
+}
+
+.vizualizar2 {
+	border: 4px solid pink;
 }
